--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
 <table class="table table-striped table-hover mt-3 borderless">
     <thead>
     <tr>
+        <th scope="col" style="width: 5%">تصویر</th>
         <th scope="col" style="width: 70%">عنوان محصول</th>
         <th scope="col" style="width: 15%" class="text-center">تعداد</th>
         <th scope="col" style="width: 15%" class="text-center">مدیریت</th>
@@ -26,7 +27,7 @@
     </thead>
     <tbody class="align-middle text-center">
     <tr>
-        <td class="text-start" colspan="3">
+        <td class="text-center" colspan="4">
             محصولی یافت نشد
         </td>
     </tr>
